kubernetes/infrastructure/pocket-id/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  serviceName: "pocket-id"
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 4Gi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 4Gi
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              # -- Healthcheck endpoint
              path: /health
              port: http
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              # -- Healthcheck endpoint
              path: /health
              port: http
          volumeMounts:
            - name: pocket-id-data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: pocket-id-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "democratic-iscsi"
        resources:
          requests:
            storage: 4Gi
