kubernetes/infrastructure/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 1411
